create-ec2.tf
resource "aws_instance" "demo" {
    ami = "ami-0e86e20dae9224db8"
    instance_type = "t2.micro"
}
